--- a/Views/Personal/Index.cshtml
+++ b/Views/Personal/Index.cshtml
@@ -100,7 +100,7 @@
 
 
     <div class="container" style="margin-top:76px;">
-        <div class="main_div" style="width:80%;margin:0 auto 0 auto; background-color:rgba(255, 255, 255, 0.95);min-height:888px;position:relative;">
+        <div class="main_div" style="width:80%;margin:0 auto 0 auto; background-color:rgba(255, 255, 255, 0.95);min-height:888px;overflow:hidden; position:relative;">
             <div class="divLeftNav">
                 <div class="left-nav-header">个人中心</div>
                 <div class="left-nav-item active">
