--- a/Views/Anchor/NewRoom.cshtml
+++ b/Views/Anchor/NewRoom.cshtml
@@ -168,7 +168,7 @@
                                 房间分类
                             </span>
                             <span style="display:inline-block;margin-left:20px;margin-top:15px;color:#777;">
-                                <span name="CLASSID" style="line-height:26px;">未选择</span>
+                                <span name="CLASSID" style="line-height:26px;color:#3b9eeb;">未选择</span>
                                 <input style="vertical-align:top;margin-left:5px;" type="button" class="white_btn btn_choose_class" value="更改" />
                             </span>
                         </div>
